allprojects {
    group = 'com.zezeno'
    version = '1.7.0-SNAPSHOT'
    apply plugin: 'java'
    apply plugin: 'idea'

    repositories {
        maven { url = 'https://repo.huaweicloud.com/repository/maven/' }
        maven { url = 'https://maven.aliyun.com/nexus/content/groups/public/' }
        mavenCentral()
    }

    idea {
        module {
            downloadSources = true
            excludeDirs += files(
                    'autokeys',
                    'binlog',
                    'doc',
                    'gradle',
                    'log',
                    'test',
                    'ZezeJava/autokeys',
                    'ZezeJava/lib',
                    'ZezeJava/log',
                    'ZezeJava/target',
                    'ZezeJavaTest/CommitRocks',
                    'ZezeJavaTest/CommitRocks100',
                    'ZezeJavaTest/CommitRocks101',
                    'ZezeJavaTest/dbhome',
                    'ZezeJavaTest/lib',
                    'ZezeJavaTest/log',
                    'ZezeJavaTest/manager0',
                    'ZezeJavaTest/manager1',
                    'ZezeJavaTest/manager2',
                    'ZezeJavaTest/master',
                    'ZezeJavaTest/RocksDB',
                    'gradlew',
                    'gradlew.bat',
            )
        }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    compileJava {
        sourceCompatibility = 21
        targetCompatibility = 21
        options.encoding = 'utf-8'
        options.incremental = true
        options.failOnError = true
        options.debugOptions.debugLevel = "source,lines,vars"
        options.compilerArgs += "-parameters"
    }
}

test {
    useJUnitPlatform()
}

tasks.register('clearJar', Delete) {
    delete 'lib'
}

tasks.register('copyJar', Sync) {
    from configurations.runtimeClasspath
    into 'lib'
}
